# tg-ops

./: README.md  app.py  cli.py  config.py  config.yaml  logging_setup.py  main.py  pyproject.toml  runtime.py
.github/workflows/: ci.yml  python-publish.yml
bot/: app_builder.py  handlers.py  webhook.py
bot/services/: fail2ban_service.py
src/: main.py
src/bot/: app_runner.py  handlers.py
src/bot/commands/: services.py
src/bot/ui/: menus.py
tests/: conftest.py  test_config.py  test_executors.py  test_handlers.py  test_menus.py  test_services.py  test_webhook.py
tg_ops/: config.py  main.py
tg_ops/bot/: handlers.py
tg_ops/templates/: config.toml
utils/: systemctl.py
web/: server.py
webhook/: routes.py
