[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "tg-ops"
version = "0.1.0"
description = "A secure Telegram bot for remote system operations and monitoring on Linux hosts"
authors = ["Idir Oura <idir.oura@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src"}]


[tool.poetry.dependencies]
python = ">=3.12"
python-telegram-bot = {version = ">=22.3,<23.0", extras = ["webhooks"]}
requests = ">=2.32.5,<3.0.0"
docker = "^7.1.0"
psutil = ">=7.2.1"

[tool.poetry.scripts]
tg-ops = "src.main:main"

# Dev dependencies
[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
mypy = "^1.19.1"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"] 
ignore = []
